--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 name: Origami
 highlighter: pygments
 relative_permalinks: false
+baseurl: /ft-origami
 exclude: [scss, node_modules, bower.json, Gruntfile.js, package.json, README.md]
 markdown: kramdown
